# AI-Customer-Support-

./: README.md  docker-compose.yml  main.py  prometheus.yml  pyproject.toml  requirements.txt  test_retrieval.py
agents/: qa.py
common/: messages.py
config/: loaders.py  schema.py
config/tenants/zepto/: config.yaml
evaluation/: golden_set.json  golden_set_multiturn.json  run_evals.py  run_multi_eval.py
evaluation/reports/: eval_report_20260720_023403.json  eval_report_20260720_120453.json  eval_report_20260720_130141.json  eval_report_20260720_133738.json  eval_report_20260720_134518.json  multiturn_eval_report_20260720_154135.json
gateway/: main.py
llm/: gateway.py
memory/: customer.py  models.py  service.py
memory/data/: cases.json  sessions.json
observability/: logging.py  metrics.py
orchestration/: execution.py  graph.py  hitl.py  planner.py  plans.py  state.py  supervisor.py  verifier.py
rag/: bm25_corpus.pkl  chunking.py  citations.py  hybrid.py  ingest_test.py  ingest_zepto_full.py  ingestion.py  reranker.py  retrieval.py  setup_pinecone.py
security/: guardrails.py
tools/: registry.py  shopify.py  stripe.py
