[project]
name = "d2c"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.2",
    "langchain>=1.3.14",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.9",
    "langchain-ollama>=1.1.0",
    "langchain-openai>=1.3.5",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.2.9",
    "langsmith>=0.10.6",
    "pinecone>=7.3.0",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pypdf>=6.14.2",
    "redis>=8.0.1",
    "shopifyapi>=12.7.0",
    "stripe>=15.3.1",
    "uvicorn>=0.51.0",
]
